<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="20sp" />
        <EditText android:id="@+id/txtProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/txtUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|numberDecimal"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@android:color/holo_red_light"
            android:background="@android:color/holo_blue_bright"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/holo_blue_dark"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>